# Catch-22-Pareto-Frontier-Watermark-in-LLMs

./: .gitignore  README.md  pyproject.toml  requirements.txt
Additional-Results/: Back-translation-plot.py  DIPPER-plot.py  Performance-evaluation.md  Readme.md  Synonym-data.py  Synonym-plot.py  backtranslation_data.npz  backtranslation_paraphrase_dataset.json  dipper_data.npz  dipper_paraphrase_dataset.json  dipper_paraphrasing_dataset.json  inference_gaussmark_lfqa  synonym_substitution_data.npz  synonym_substitution_paraphrase_dataset.json  train_llama2_gaussmark.py
Analysis-Results/: Fig1Plot.py  Fig2Plot.py  Fig3Plot.py  Readme.md  pareto_frontier_data.npz  theorem1_detectability_data.npz  theorem3_robustness_data.npz
Llama2-Watermark/: Readme.md  llama2_CGW_inference_LFQA.py  llama2_DiPMark_inference_LFQA.py  llama2_HCW_inference_LFQA.py  llama2_Hybrid_inference_LFQA.py  llama2_KGW_inference_LFQA.py  llama2_Unigram_inference_LFQA.py  llama2_vanilla_inference_LFQA.py
Llama2-Watermark/data/: Readme.md
Llama2-Watermark/data/LFQA/: Readme.md  christ_watermark_stats.json  dipmark_watermark_stats.json  unigram_watermark_stats.json  (+6 more)
configs/: README.md  llama2_lfqa.yaml  mistral_lfqa.yaml
data/: README.md
data/lfqa/: README.md  inputs.jsonl
docs/: README.md  reproduce_lfqa.md  slurm.md
figures/: README.md  Readme.md
scripts/: README.md
src/: README.md
src/catch22/: README.md  __init__.py  attack.py  config.py  evaluate.py  generate.py  io.py  modeling.py  paraphrase.py  pipeline.py  registry.py  render.py  score.py  validate_config.py  watermarks.py
(+16 files in other folders)
